--- a/sketch1.html
+++ b/sketch1.html
@@ -38,6 +38,10 @@
     </nav>
     <span><img   src="img/pic1.jpeg" class="card-img-top img-fluid" alt="khushi"></span>
     <span><img src="img/pic4.jpeg" class="card-img-top img-fluid"  alt="khushi"></span>
+	<span><img   src="img/img5.jpeg" class="card-img-top img-fluid" alt="khushi"></span>
+    <span><img   src="img/img7.jpeg" class="card-img-top img-fluid" alt="khushi"></span>
+    <span><img   src="img/img6.jpeg" class="card-img-top img-fluid" alt="khushi"></span>
+    <span><img   src="img/img8.jpeg" class="card-img-top img-fluid" alt="khushi"></span>
     <footer class="footer">
         <div class="container"> 
             <div class="row">             
