--- a/Achievement.html
+++ b/Achievement.html
@@ -79,7 +79,7 @@
 
         </div>
         <hr>
-        <div class="row row-content  top-container">
+<!--         <div class="row row-content  top-container">
             <div class="col-sm-1"></div>
             <div class="col-sm-2">
                 <h1>Sketches<span><img src="https://img.icons8.com/cute-clipart/64/000000/pencil.png"/></span></h1>
@@ -101,7 +101,7 @@
             </div>
             
 
-        </div>
+        </div> -->
         <hr>
         <div class="row row-content align-item-center">
             <div class="col-sm">
