--- a/aboutus.html
+++ b/aboutus.html
@@ -140,10 +140,13 @@
         <div class="row  row-content">
             <div>
                 <h2>PROJECTS:-</h2>
-                <h3>BILL-BUCKET</h3>
-                <p   class="d-none d-sm-block">It is a hybrid mobile application using react native ,Nodejs, and MySQL.
-                    It is an application used to store the bills on your mobile safely.
+                <h3>Notes-App</h3>
+                <p   class="d-none d-sm-block">– It is a node.js based project in which we can save our list using command line interface.
                     </p>
+		    <h3>RESTful API with HTTP and JavaScript</h3>
+		    <p> -created a useful recipe search engine web page.
+By understanding the principles of REST, API and writing code in JavaScript to interface with
+other systems in web pages</p>
                 <h3>HOTEL-MANAGEMENT SYSTEM</h3>
                 <p  class="d-none d-sm-block">It is a python project using tkinter.</p>
                 <h3>PORTFOLIO WEBSITE</h3>
@@ -173,7 +176,7 @@
             <h2>Programming Languages </h2>
             <h3>C,
                 Python,
-                HTML 5,CSS,JavaScript,C++,Bootstrap 4,React.
+                HTML 5,CSS,JavaScript,C++,Bootstrap 4,Node js.
               </h3>
             
         </div>
